--- a/quickstart-with-apollo/package.json
+++ b/quickstart-with-apollo/package.json
@@ -7,9 +7,10 @@
     "react-scripts": "0.9.0"
   },
   "dependencies": {
-    "react": "^15.4.2",
+    "react": "^15.6.1",
     "react-apollo": "^1.2.0",
-    "react-dom": "^15.3.1",
+    "react-bootstrap": "^0.31.1",
+    "react-dom": "^15.6.1",
     "react-modal": "^1.6.5",
     "react-router-dom": "^4.0.0",
     "tachyons": "^4.3.1"
