--- a/quickstart-with-apollo/package.json
+++ b/quickstart-with-apollo/package.json
@@ -11,6 +11,7 @@
     "react-apollo": "^1.2.0",
     "react-bootstrap": "^0.31.1",
     "react-dom": "^15.6.1",
+    "react-dropzone": "^3.13.3",
     "react-modal": "^1.6.5",
     "react-router-dom": "^4.0.0",
     "tachyons": "^4.3.1"
